--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   },
   "homepage": "https://github.com/evolvelabs/electron-updater-sample-plugin",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "chai": "^2.3.0",
+    "mocha": "^2.2.4",
+    "proxyquire": "^1.4.0",
+    "sinon": "^1.14.1"    
   }
 }
